# esp32-face-detection

./: .gitignore  LICENSE  README.md  run-pipeline.sh
esp32/main/: inference.cpp  main.cpp
inference/esp32/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
inference/esp32/main/: CMakeLists.txt  camera_pipeline.cpp  camera_pipeline.h  classifier.cpp  classifier.h  config.h  idf_component.yml  inference.cpp  inference.h  main.cpp  model.h  model_data.cc  model_data.h
predict/: partitions.csv  sdkconfig  sdkconfig.old
predict/main/: CMakeLists.txt  camera_pipeline.cpp  classifier.cpp  config.h  idf_component.yml  main.cpp  model_data.h
training/: data.py  main.py  model.py  pyproject.toml  train.py  utils.py
training/models/: face_classifier.keras
